# polyGLons

./: README.md
polyglons/: .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  README.md  build-wasm.sh  package-lock.json  package.json
polyglons/local_modules/polyglons-wasm/: package.json  polyglons_wasm.d.ts  polyglons_wasm.js  polyglons_wasm_bg.js  polyglons_wasm_bg.wasm  polyglons_wasm_bg.wasm.d.ts
polyglons/public/: index.html
polyglons/public/models/: boat.gltf  boat_2.gltf  cactus1.glb  i_love_graphics.glb  palm.gltf  petals.gltf  prickly_pear.gltf  rock1.gltf  rock2.gltf  rock3.gltf  rock3_red.gltf  ruins.gltf  sakura_1.gltf  snowy_tree_1.gltf  tree.glb  tree2.glb  tree3.gltf
polyglons/src/: App.js  index.js  lib.rs
polyglons/src/components/: Audio.js  Boat.jsx  Controls.js  CustomCamera.js  Island.js  Island.jsx  Rig.js  Skybox.js  Terrain.js  Terrain.jsx  Water.js  audio.js  objectGen.js  perlinTerrain.js  pointerLockControls2.js  skybox.js
polyglons/src/css/: App.css  index.css  style.css
polyglons/src/mesh/: attribute.rs  buf.rs  mod.rs  perlin.rs
polyglons/src/object/: objectGen.js
polyglons/src/polyglons-wasm/: package.json  polyglons_wasm.d.ts  polyglons_wasm.js  polyglons_wasm_bg.wasm  polyglons_wasm_bg.wasm.d.ts
polyglons/src/utils/: constants.js  utils.js
polyglons/src/water/: shapes.rs
