[package]
name = "polyglons-wasm"
version = "0.1.0"
edition = "2021"
description = "package for dynamic terrain generation and other features"
repository = "https://github.com/serulii/polyGLons"
license = "Apache-2.0 OR MIT"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.13.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
wasm-bindgen = "0.2.95"

[dependencies.getrandom]
version = "0.2.15"
features = [ "js" ]

[dependencies.rand]
version = "0.8.5"
features = [ "small_rng", ]

[dependencies.nalgebra]
version = "0.33.2"
features = [ "serde-serialize", "rand" ]

[dependencies.web-sys]
version = "0.3.72"
features = ["console", "HtmlCanvasElement", "Window", "Document"]

[dependencies.bytemuck]
version = "1.19.0"
features = ["derive", "extern_crate_alloc"]

