[package]
name = "polyglons-wasm"
version = "0.1.0"
edition = "2021"
description = "package for dynamic terrain generation and other features"
repository = "https://github.com/serulii/polyGLons"
license = "Apache-2.0 OR MIT"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
noise = "0.9.0"
rustc-hash = "2.0.0"
wasm-bindgen = "0.2.95"

[dependencies.getrandom]
version = "0.2.15"
features = [ "js" ]

[dependencies.nalgebra]
version = "0.33.2"
features = [ "serde-serialize", "rand" ]

[dependencies.bytemuck]
version = "1.19.0"
features = ["derive", "extern_crate_alloc"]

